--- a/.ado/templates/integration-test-job.yml
+++ b/.ado/templates/integration-test-job.yml
@@ -13,8 +13,7 @@ jobs:
       - name: BuildLogDirectory
         value: $(Build.BinariesDirectory)\$(BuildPlatform)\BuildLogs
 
-    pool:
-      vmImage: $(VmImage)
+    pool: $(AgentPool)
 
     timeoutInMinutes: 60 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
