--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -64,12 +64,12 @@ jobs:
         clean: false
         submodules: false
 
-      - task: PowerShell@2
-        displayName: "Check if this environment meets the development dependencies"
-        inputs:
-          targetType: filePath
-          filePath: $(Build.SourcesDirectory)\vnext\Scripts\rnw-dependencies.ps1
-          arguments: -NoPrompt -Tags buildLab
+      # - task: PowerShell@2
+      #   displayName: "Check if this environment meets the development dependencies"
+      #   inputs:
+      #     targetType: filePath
+      #     filePath: $(Build.SourcesDirectory)\vnext\Scripts\rnw-dependencies.ps1
+      #     arguments: -NoPrompt -Tags buildLab
 
       - template: templates/build-rnw.yml
         parameters:
