--- a/packages/@react-native-windows/cli/package.json
+++ b/packages/@react-native-windows/cli/package.json
@@ -17,6 +17,7 @@
     "watch": "just-scripts watch"
   },
   "dependencies": {
+    "@react-native-windows/telemetry": "^0.0.0-canary.1",
     "applicationinsights": "^1.8.8",
     "chalk": "^4.1.0",
     "cli-spinners": "^2.2.0",
