--- a/packages/@react-native-windows/telemetry/.vscode/launch.json
+++ b/packages/@react-native-windows/telemetry/.vscode/launch.json
@@ -18,6 +18,9 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "port": 9229,
+            "env": {
+                "RNW_CLI_TEST": "true", 
+            }
         }
     ]
 }
