--- a/packages/@react-native-windows/telemetry/package.json
+++ b/packages/@react-native-windows/telemetry/package.json
@@ -1,55 +1,32 @@
 {
-  "name": "@react-native-windows/cli",
-  "version": "0.0.0-canary.28",
+  "name": "@react-native-windows/telemetry",
+  "version": "0.0.0-canary.1",
   "license": "MIT",
   "main": "lib-commonjs/index.js",
+  "typings": "lib-commonjs/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git@github.com:microsoft/react-native-windows.git",
-    "directory": "packages/@react-native-windows/cli"
+    "directory": "packages/@react-native-windows/telemetry"
   },
   "scripts": {
     "build": "just-scripts build",
     "clean": "just-scripts clean",
     "lint": "just-scripts lint",
     "lint:fix": "just-scripts lint:fix",
-    "test": "just-scripts test",
+    "test": "set RNW_CLI_TEST=true&& just-scripts test",
     "watch": "just-scripts watch"
   },
   "dependencies": {
-    "@react-native-windows/telemetry": "^0.0.0-canary.1",
-    "chalk": "^4.1.0",
-    "cli-spinners": "^2.2.0",
-    "envinfo": "^7.5.0",
-    "glob": "^7.1.1",
-    "inquirer": "^3.0.6",
-    "mustache": "^4.0.1",
-    "nuget-exe": "4.9.2",
-    "ora": "^3.4.0",
-    "semver": "^7.3.2",
-    "shelljs": "^0.8.4",
-    "username": "^5.1.0",
-    "uuid": "^3.3.2",
-    "xml-parser": "^1.2.1",
-    "xmldom": "^0.3.0",
-    "xpath": "^0.0.27"
+    "applicationinsights": "^1.8.8"
   },
   "devDependencies": {
-    "@react-native-community/cli-types": "^4.10.1",
     "@rnw-scripts/eslint-config": "0.1.4",
     "@rnw-scripts/jest-unittest-config": "0.1.1",
     "@rnw-scripts/just-task": "0.0.6",
     "@rnw-scripts/ts-config": "0.1.0",
-    "@types/chalk": "^2.2.0",
-    "@types/inquirer": "^6.5.0",
     "@types/jest": "^26.0.13",
-    "@types/mustache": "^4.0.1",
-    "@types/ora": "^3.2.0",
     "@types/semver": "^7.3.3",
-    "@types/shelljs": "^0.8.8",
-    "@types/uuid": "^8.0.0",
-    "@types/xml-parser": "^1.2.29",
-    "@types/xmldom": "^0.1.29",
     "babel-jest": "^26.3.0",
     "eslint": "6.8.0",
     "jest": "^26.4.2",
@@ -58,8 +35,7 @@
     "typescript": "^3.8.3"
   },
   "files": [
-    "lib-commonjs",
-    "powershell"
+    "lib-commonjs"
   ],
   "beachball": {
     "defaultNpmTag": "canary",
