--- a/packages/react-native-windows-init/package.json
+++ b/packages/react-native-windows-init/package.json
@@ -17,7 +17,7 @@
     "react-native-windows-init": "./bin.js"
   },
   "dependencies": {
-    "@react-native-windows/telemetry": "^0.0.0-canary.1",
+    "@react-native-windows/telemetry": "^0.63.1",
     "chalk": "^3",
     "mustache": "^4.0.1",
     "npm-registry": "^0.1.13",
