mark packages private

--- a/packages/@react-native-windows/cli/src/e2etest/projects/BarPackage/package.json
+++ b/packages/@react-native-windows/cli/src/e2etest/projects/BarPackage/package.json
@@ -2,5 +2,6 @@
   "name": "bar",
   "version": "1.2.3",
   "description": "Synthetic project.json for testing project.json logic",
-  "license": "MIT"
+  "license": "MIT",
+  "private":"true"
 }
