--- a/packages/@react-native-windows/cli/src/e2etest/projects/FooPackage/package.json
+++ b/packages/@react-native-windows/cli/src/e2etest/projects/FooPackage/package.json
@@ -2,5 +2,6 @@
   "name": "foo",
   "version": "1.2.3",
   "description": "Synthetic project.json for testing project.json logic",
-  "license": "MIT"
+  "license": "MIT",
+  "private":"true"
 }
