--- a/packages/react-native-win32/tsconfig.json
+++ b/packages/react-native-win32/tsconfig.json
@@ -5,15 +5,14 @@
     "module": "commonjs",
     "jsx": "react",
     "outDir": ".",
-    "declaration": true,
-    "inlineSourceMap": true,
-    "inlineSources": true,
     "experimentalDecorators": true,
-    "noEmitOnError": true,
+    "noEmit": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "strict": true,
+    "rootDir": "src"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "lib"]
+  "exclude": ["node_modules"]
 }
