--- a/vnext/tsconfig.json
+++ b/vnext/tsconfig.json
@@ -5,11 +5,8 @@
     "module": "commonjs",
     "jsx": "react",
     "outDir": ".",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
     "experimentalDecorators": true,
-    "noEmitOnError": true,
+    "noEmit": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
     "noUnusedLocals": true,
