--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -13,7 +13,7 @@
     "e2ebundle": "npm run bundle && react-native run-windows --no-launch --no-packager --bundle --logging && npm run e2etest",
     "e2etest": "rimraf reports/* && set FORCE_COLOR=2 & node run_wdio.js",
     "testspec": "wdio --spec",
-    "bundle": "just-scripts prepareBundle && react-native bundle --platform windows --entry-file dist/app/index.js --bundle-output windows/ReactUWPTestApp/Bundle/index.windows.bundle --assets-dest windows/ReactUWPTestApp/Bundle",
+    "bundle": "just-scripts prepareBundle && react-native bundle --platform windows --entry-file app/index.ts --bundle-output windows/ReactUWPTestApp/Bundle/index.windows.bundle --assets-dest windows/ReactUWPTestApp/Bundle",
     "buildapp": "react-native run-windows --no-launch --no-packager --no-deploy",
     "deployapp": "react-native run-windows --no-launch --no-packager --no-build",
     "buildbundleapp": "npm run bundle && react-native run-windows --no-launch --no-packager --no-deploy --bundle",
