--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -733,9 +733,9 @@ jobs:
           script: npx --no-install beachball check --branch origin/$(System.PullRequest.TargetBranch) --changehint "Run `yarn change` from root of repo to generate a change file."
 
       - task: CmdLine@2
-        displayName: yarn buildci
+        displayName: yarn build
         inputs:
-          script: yarn buildci
+          script: yarn build
 
       - task: CmdLine@2
         displayName: yarn format:verify
